2008-12-27 Borut Razem <borut.razem AT siol.net>

	* device/lib/_memcpy.c:
	  fixed conflict with builtin memcpy()

2008-12-26 Borut Razem <borut.razem AT siol.net>

	* support/librarian/sdcclib.c:
	  fixed bug 2466950: "sdcclib broken"
	  by removing fgets return value check

2008-12-26 Philipp Klaus Krause <pkk AT spth.de>
	* src/z80/main.c,
	  src/z80/gen.c,
	  device/include/string.h: Implemented RFE #1914254

2008-12-26 Philipp Klaus Krause <pkk AT spth.de>
	* device/lib/z80/Makefile.in,
	  device/lib/Makefile.in,
	  device/lib/z80/memmove.s: Implemented RFE #1914256

2008-12-26 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/peeph-z80.def: fixed a bug in peephole 0zf
	* src/z80/peep.c: improved checks for unused data
	* src/z80/gen.c,
	  src/z80/main.c: Implemented RFE #1899189

2008-12-25 Borut Razem <borut.razem AT siol.net>

	* support/regression/Makefile.in:
	  add -I$(INC_DIR) to SDCCFLAGS only if INC_DIR is defined

2008-12-25 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/peeph-z80.def: minor peephole improvements

2008-12-21 Borut Razem <borut.razem AT siol.net>

	* support/librarian/sdcclib.c: fixed build failure on Mac OS X
	  due to redefinition of symbol __assert
	  sdcclib.c:53:1:warning: "__assert" redefined
	  /Xcode2.5/SDKs/MacOSX10.4u.sdk/usr/include/assert.h:80:1:
	  warning: this is the location of the previous definition

2008-12-20 Raphael Neider <rneider AT web.de>

	* debugger/mcs51/break.c, debugger/mcs51/cmd.c,
	  debugger/mcs51/simi.c, debugger/mcs51/symtab.c,
	  support/cpp/libcpp/macro.c: fix format string errors

	* sim/ucsim/s51.src/timer2.cc: add clarifying parens

	* src/pic/device.c: partial rewrite using strtok,
	  quieten compiler warnings, adopt SDCC coding style

	* as/link/hc08/lkelf.c, as/link/lkaomf51.c, as/link/lklibr.c,
	  as/link/z80/lkgb.c, as/z80/asout.c, debugger/mcs51/cmd.c,
	  sim/ucsim/utils.cc, src/SDCCasm.c, support/Util/dbuf_string.c,
	  support/cpp/c-ppoutput.c, support/cpp/libcpp/lex.c,